# fastapi-example

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: router.py
app/api/v1/endpoints/: health.py  meta.py  users.py
app/api/v1/schemas/: meta.py  user_request.py  user_response.py
app/models/: base.py  user.py
src/: main.py
src/api/: router.py
src/api/v1/endpoints/: meta.py
tests/: conftest.py  test_health.py  test_meta.py  test_root.py
