[tool.poetry]
name = "fastapi-example"
version = "0.1.0"
description = "A quick implementation of fastapi"
authors = ["jdewgun <dewgun94@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_example"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["email"], version = "^0.85.1"}
uvicorn = "^0.18.3"
fastapi-pagination = "^0.10.0"
requests = "^2.28.1"
pytest-cov = "^4.0.0"
databases = {extras = ["aiosqlite"], version = "^0.6.1"}
pydantic = {extras = ["email"], version = "^1.10.2"}
SQLAlchemy = "^1.4.42"
isort = "^5.10.1"


[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
black = "^22.10.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]
pythonpath = [
  ".", "src"
]
